syntax = "proto3";

package user.v1;

option go_package = "github.com/changzhijay2/week04/api/user/v1";

service UserService{
    rpc GetUserInfo(UserRequest) returns (UserResponse){}
}

message UserRequest {
    int32 user_id = 1;
}

message UserResponse {
    int32 user_id = 1;
    string user_name = 2;
    string password = 3;
    int32 age = 4;
}


// protoc --go_out=. --go_opt=paths=source_relative .\api\user\v1\user.proto
// protoc --go-grpc_out=. --go-grpc_opt=paths=source_relative .\api\user\v1\user.proto